<resources>
    <string name="app_name">Task</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title">Title</string>
    <string name="done">Done</string>
    <string name="description">Description</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="yyyy_mm_dd">yyyy-mm-dd</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="register">register</string>
    <string name="login">login</string>
    <string name="full_name">Full Name</string>
    <string name="no_task_available">No Task Available</string>
</resources>